<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.recipe.RecipeActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/recipe_toolbar_image_height"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_backDrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/recipe_item_image_description"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    tools:src="@drawable/brownie" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/scrim_gradient"/>

            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_recipe"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                tools:text="Brownie" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/sv_recipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/sv_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/recipe_toolbar_image_height"
                android:contentDescription="@string/recipe_item_image_description"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@drawable/brownie"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_ingredients_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginStart="@dimen/standard_margin"
                android:fontFamily="@font/raleway"
                android:text="@string/ingredients_label"
                android:textColor="@android:color/primary_text_light"
                android:textSize="@dimen/list_label_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sv_image" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_ingredients_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                app:layout_constraintTop_toBottomOf="@id/tv_ingredients_label"
                tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/item_ingredient" />

            <TextView
                android:id="@+id/tv_steps_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginStart="@dimen/standard_margin"
                android:fontFamily="@font/raleway"
                android:text="@string/steps_label"
                android:textColor="@android:color/primary_text_light"
                android:textSize="@dimen/list_label_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_ingredients_list" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_steps_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                app:layout_constraintTop_toBottomOf="@id/tv_steps_label"
                tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/item_step" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>